--- a/css/style.css
+++ b/css/style.css
@@ -75,3 +75,19 @@ header.masthead h1 {
 .features-icons .features-icons-item:hover .features-icons-icon i {
   font-size: 5rem;
 }
+
+/* Image Showcases */
+.showcase .showcase-text {
+  padding: 3rem;
+}
+
+.showcase .showcase-img {
+  min-height: 30rem;
+  background-size: cover;
+}
+
+@media (min-width: 768px) {
+  .showcase .showcase-text {
+    padding: 7rem;
+  }
+}
