--- a/css/style.css
+++ b/css/style.css
@@ -126,3 +126,9 @@ header.masthead h1 {
   left: 0;
   opacity: 0.3;
 }
+
+/* Footer */
+footer.footer {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
